--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
               <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">О седоне</a>
+              <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
@@ -35,6 +35,7 @@
             <li class="navigation-item">
               <a class="navigation-link-selected" href="#">
                 <span class="visually-hidden">Корзина(избранное)</span>
+                <span class="like-icon-number">12</span>
               </a>
             </li>
             <li class="navigation-item">
@@ -60,58 +61,96 @@
               <a class="breadcrumbs-link" href="#">Гостиницы</a>
             </li>
           </ul>
+          <!-- Форма -->
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+
             <fieldset class="catalog-filter-group catalog-filter-infrastructure">
               <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-item" type="checkbox" name="pool" checked>
-                    Бассейн
+                    <input class="visually-hidden control-input" type="checkbox" name="pool" checked>
+                    <span class="control-mark"></span>
+                    <span class="control-label">Бассейн</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-item" type="checkbox" name="parking" checked>
-                    Парковка
+                    <input class="visually-hidden control-input" type="checkbox" name="parking" checked>
+                    <span class="control-mark"></span>
+                    <span ><span class="control-label">Парковка</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-item" type="checkbox" name="wifi">
-                    Wi-Fi
+                    <input class="visually-hidden control-input" type="checkbox" name="wifi">
+                    <span class="control-mark"></span>
+                    <span ><span class="control-label">Wi-Fi</span>
                   </label>
                 </li>
               </ul>
             </fieldset>
+
             <fieldset class="catalog-filter-group catalog-filter-housing">
               <legend class="catalog-filter-title">Тип жилья:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-item" type="radio" name="hotel-group" value="hotel" checked>
-                    Гостиница
+                    <input class= "visually-hidden control-input" type="radio" name="hotel-group" value="hotel" checked>
+                    <span class="control-mark"></span>
+                    <span class="control-label">Гостиница</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-item" type="radio" name="hotel-group" value="motel">
-                    Мотель
+                    <input class= "visually-hidden control-input" type="radio" name="hotel-group" value="motel">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Мотель</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-item" type="radio" name="hotel-group" value="apartment">
-                    Апартаменты
+                    <input class= "visually-hidden control-input" type="radio" name="hotel-group" value="apartment">
+                    <span class="control-mark"></span>
+                    <span class="control-label">Апартаменты</span>
                   </label>
                 </li>
               </ul>
             </fieldset>
+
             <fieldset class="catalog-filter-group catalog-filter-price">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+              <div class="range">
+                <div class="range-wrapper-inputs">
+                  <div class="range-inputs-group">
+                    <input class="range-input range-input-min" type="number" for="number-min-price" value="0" name="min-price">
+                  <label class="catalog-filter-label" id="number-min-price">от</label>
+                  </div>
+
+                  <div class="range-inputs-group">
+                    <input class="range-input range-input-max" type="number" for="number-max-price" value="9000" name="max-price">
+                  <label class="catalog-filter-label" id="number-max-price">до</label>
+                  </div>
+
+                </div>
+
+                <div class="range-groupe">
+                  <div class="range-scale"></div>
+                  <div class="range-bar" style="left: 0; width: 226px;">
+                    <button class="range-toggle toggle-min" type="button">
+                      <span class="visually-hidden">Изменить минимальную цену</span>
+                    </button>
+                    <button class="range-toggle toggle-max" type="button">
+                      <span class="visually-hidden">Изменить максимальную цену</span>
+                    </button>
+                  </div>
+
+                </div>
+              </div>
             </fieldset>
+
             <div class="catalog-buttons">
-              <button class="button button-blue" type="submit">Применить</button>
+              <button class="button button-blue button-apply" type="submit">Применить</button>
               <button class="button button-reset" type="reset">Сбросить</button>
             </div>
           </form>
@@ -157,6 +196,7 @@
               </div>
               <div class="rating">
                 <div class="rating-block-star">
+                  <span class="visually-hidden">четыре звезды</span>
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
@@ -178,10 +218,11 @@
               </p>
               <div class="buttons-block">
                 <a class="show-more button" href="#">подробнее</a>
-                <button class="button button-blue" type="button">в избранное</button>
+                <button class="button button-green" type="button">в избранном</button>
               </div>
               <div class="rating">
                 <div class="rating-block-star">
+                  <span class="visually-hidden">четыре звезды</span>
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
@@ -207,6 +248,7 @@
               </div>
               <div class="rating">
                 <div class="rating-block-star">
+                  <span class="visually-hidden">три звезды</span>
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
@@ -231,6 +273,7 @@
               </div>
               <div class="rating">
                 <div class="rating-block-star">
+                  <span class="visually-hidden">две звезды</span>
                   <span class="rating-star"></span>
                   <span class="rating-star"></span>
                 </div>
@@ -264,12 +307,12 @@
         <!-- Секция с формой для подписки -->
         <section class="mailing-catalog">
           <h2 class="section-title mailing-title">Подпишитесь на рассылку</h2>
-          <p class="text-basic">
-            Только полезная информация и никакого спама, честное бойскаутское!
+          <p class="text-basic mailing-text">
+            Только полезная информация и никакого спама,<br>честное бойскаутское!
           </p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
             <label class="visually-hidden" for="subscription_email">Ваш e-mail</label>
-            <input class="mailing-input" placeholder="Ваш e-mail" type="text" name="mailing" id="subscription-email"
+            <input class="mailing-input" placeholder="Ваш e-mail" type="email" name="mailing" id="subscription-email"
               required>
             <button class="button button-blue additional-button" type="submit">
               Подписаться
@@ -283,34 +326,16 @@
         <ul class="social-list">
           <li class="social-item">
             <a class="button-social-vk" href="https://vk.com/htmlacademy">
-              <svg class="social-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 24 14"
-                fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z"
-                  fill="#83B3D3" />
-              </svg>
               <span class="visually-hidden">Vk</span>
             </a>
           </li>
           <li class="social-item">
             <a class="button-social-telegram" href="https://t.me/htmlacademy ">
-              <svg class="social-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 18 16"
-                fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z"
-                  fill="#83B3D3" />
-              </svg>
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
           <li class="social-item">
             <a class="button-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <svg class="social-icon" aria-hidden="true" focusable="false" width="23" height="18" viewBox="0 0 23 18"
-                fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z"
-                  fill="#83B3D3" />
-              </svg>
               <span class="visually-hidden">YouTube</span>
             </a>
           </li>
@@ -318,43 +343,6 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 
         <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
-          <svg aria-hidden="true" focusable="false" width="115" height="34" viewBox="0 0 115 34" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 13.7232V16.3232H2.5V13.7232H0Z" fill="black" />
-            <path
-              d="M11.6 5.32324C10 5.32324 8.8 6.02324 8 7.02324H7.9V0.823242H5.9V16.3232H7.9V11.0232C7.9 8.92324 9.2 7.42324 11.2 7.42324C13 7.42324 14.1 8.82324 14.1 10.6232V16.3232H16.1V10.2232C16.2 7.22324 14.3 5.32324 11.6 5.32324Z"
-              fill="black" />
-            <path
-              d="M26.6 5.62324H21.8V1.92324H19.8V5.72324H17.9V7.72324H19.8V13.7232C19.8 15.4232 20.8 16.4232 22.5 16.4232H26.6V14.4232H22.9C22.2 14.4232 21.8 14.0232 21.8 13.3232V7.62324H26.6V5.62324Z"
-              fill="black" />
-            <path
-              d="M41.1 5.42324C39.5 5.42324 38.2 6.22324 37.6 7.52324H37.5C36.9 6.32324 35.7 5.42324 34.1 5.42324C32.7 5.42324 31.6 6.22324 31 7.22324H30.9V5.62324H29V16.2232H31V10.8232C31 8.82324 32 7.32324 33.6 7.32324C35.1 7.32324 36 8.32324 36 9.92324V16.2232H38V10.6232C38 8.22324 39.4 7.32324 40.6 7.32324C42.1 7.32324 43 8.32324 43 9.92324V16.2232H45V9.72324C45.1 7.22324 43.6 5.42324 41.1 5.42324Z"
-              fill="black" />
-            <path
-              d="M47.8 13.5232C47.8 15.2232 48.8 16.2232 50.6 16.2232H52.6V14.2232H50.9C50.2 14.2232 49.8 13.8232 49.8 13.1232V0.823242H47.8V13.5232Z"
-              fill="black" />
-            <path
-              d="M28.9 20.5232C28 19.4232 26.7 18.7232 25 18.7232C21.9 18.7232 19.6 21.0232 19.6 24.3232C19.6 27.6232 21.9 29.9232 25 29.9232C26.8 29.9232 28 29.1232 28.8 28.0232H28.9V29.6232H30.9V19.0232H28.9V20.5232ZM25.3 27.9232C23.1 27.9232 21.7 26.3232 21.7 24.3232C21.7 22.3232 23.1 20.7232 25.3 20.7232C27.5 20.7232 28.9 22.3232 28.9 24.3232C28.9 26.2232 27.5 27.9232 25.3 27.9232Z"
-              fill="black" />
-            <path
-              d="M44.2 22.8232C43.7 20.4232 41.6 18.7232 38.8 18.7232C35.4 18.7232 33.2 21.2232 33.2 24.3232C33.2 27.4232 35.4 29.9232 38.8 29.9232C41.6 29.9232 43.7 28.1232 44.2 25.7232H42.1C41.7 27.0232 40.4 28.0232 38.8 28.0232C36.6 28.0232 35.2 26.4232 35.2 24.4232C35.2 22.4232 36.6 20.8232 38.8 20.8232C40.4 20.8232 41.6 21.8232 42.1 23.0232H44.2V22.8232Z"
-              fill="black" />
-            <path
-              d="M55.1 20.5232C54.2 19.4232 52.9 18.7232 51.2 18.7232C48.1 18.7232 45.8 21.0232 45.8 24.3232C45.8 27.6232 48.1 29.9232 51.2 29.9232C53 29.9232 54.2 29.1232 55 28.0232H55.1V29.6232H57.1V19.0232H55.1V20.5232ZM51.5 27.9232C49.3 27.9232 47.9 26.3232 47.9 24.3232C47.9 22.3232 49.3 20.7232 51.5 20.7232C53.7 20.7232 55.1 22.3232 55.1 24.3232C55.1 26.2232 53.6 27.9232 51.5 27.9232Z"
-              fill="black" />
-            <path
-              d="M68.7 20.6232C67.8 19.5232 66.5 18.7232 64.8 18.7232C61.7 18.7232 59.4 21.0232 59.4 24.3232C59.4 27.6232 61.6 29.9232 64.8 29.9232C66.5 29.9232 67.8 29.1232 68.6 28.1232H68.7V29.6232H70.7V14.2232H68.7V20.6232ZM65.1 27.9232C62.9 27.9232 61.5 26.3232 61.5 24.3232C61.5 22.3232 62.9 20.7232 65.1 20.7232C67.3 20.7232 68.7 22.3232 68.7 24.3232C68.6 26.3232 67.2 27.9232 65.1 27.9232Z"
-              fill="black" />
-            <path
-              d="M78.3 18.7232C75 18.7232 72.8 21.2232 72.8 24.3232C72.8 27.3232 74.9 29.9232 78.3 29.9232C80.8 29.9232 82.8 28.6232 83.5 26.3232H81.4C80.9 27.3232 79.8 27.9232 78.4 27.9232C76.5 27.9232 75.1 26.6232 75 25.0232H83.8C84 21.4232 81.8 18.7232 78.3 18.7232ZM78.3 20.6232C80 20.6232 81.3 21.6232 81.6 23.2232H75.1C75.4 21.7232 76.6 20.6232 78.3 20.6232Z"
-              fill="black" />
-            <path
-              d="M98.2 18.7232C96.6 18.7232 95.3 19.5232 94.6 20.7232H94.5C93.9 19.5232 92.7 18.7232 91.1 18.7232C89.7 18.7232 88.6 19.4232 88 20.5232V19.0232H86.1V29.6232H88.1V24.2232C88.1 22.2232 89.1 20.8232 90.7 20.7232C92.2 20.7232 93.1 21.7232 93.1 23.3232V29.6232H95.1V24.0232C95.1 21.6232 96.5 20.7232 97.7 20.7232C99.2 20.7232 100.1 21.7232 100.1 23.3232V29.6232H102.1V23.1232C102.2 20.5232 100.7 18.7232 98.2 18.7232Z"
-              fill="black" />
-            <path
-              d="M109.4 27.8232L105.8 18.9232H103.6L108.4 30.5232C108.1 31.4232 107.7 31.7232 106.7 31.7232H104.2V33.7232H106.7C108.5 33.7232 109.5 32.9232 110.2 31.1232L114.9 18.9232H112.8L109.4 27.8232Z"
-              fill="black" />
-          </svg>
           <span class="visually-hidden">html academy</span>
         </a>
       </footer>
