--- a/catalog.html
+++ b/catalog.html
@@ -78,14 +78,14 @@
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="parking" checked>
                     <span class="control-mark"></span>
-                    <span ><span class="control-label">Парковка</span>
+                    <span class="control-label">Парковка</span>
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="wifi">
                     <span class="control-mark"></span>
-                    <span ><span class="control-label">Wi-Fi</span>
+                    <span class="control-label">Wi-Fi</span>
                   </label>
                 </li>
               </ul>
@@ -123,13 +123,13 @@
               <div class="range">
                 <div class="range-wrapper-inputs">
                   <div class="range-inputs-group">
-                    <input class="range-input range-input-min" type="number" for="number-min-price" value="0" name="min-price">
-                  <label class="catalog-filter-label" id="number-min-price">от</label>
+                    <input class="range-input range-input-min" type="number" value="0" name="min-price" placeholder="0">
+                  <label class="catalog-filter-label" >от</label>
                   </div>
 
                   <div class="range-inputs-group">
-                    <input class="range-input range-input-max" type="number" for="number-max-price" value="9000" name="max-price">
-                  <label class="catalog-filter-label" id="number-max-price">до</label>
+                    <input class="range-input range-input-max" type="number" value="9000" name="max-price" placeholder="9000">
+                  <label class="catalog-filter-label" >до</label>
                   </div>
 
                 </div>
