--- a/index.html
+++ b/index.html
@@ -169,64 +169,62 @@
     </div>
 
     <!-- Попап -->
-    <div class="modal-container">
+    <div class="modal-container modal-container-close">
       <div class="modal-search-hotel">
-        <button class="modal-close-button" type="button">
-          <span class="visually-hidden">Закрыть</span>
-        </button>
+
         <section class="modal-content">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
           <form class="modal-form" action="https://echo.htmlacademy.ru/" method="get">
-            <label class="modal-form-label" for="">
-              Дата заезда:
-              <div class="modal-input-and-text">
-                <input class="input-date" type="date" name="Дата заезда" placeholder="27 апреля 2020">
-                <span class="modal-form-text text-danger">Мы не можем отправить вас в прошлое.</span>
-              </div>
-            </label>
+            <label class="modal-form-label" for="arrival-date">Дата заезда:</label>
+            <div class="block-input-span">
+              <input class="input-date" type="text" id="arrival-date" name="Дата заезда" value="27 апреля 2020"
+                placeholder="Введите дату заезда" required>
+              <span class="modal-form-text text-danger">Мы не можем отправить вас в прошлое.</span>
+            </div>
 
-            <label class="modal-form-label" for="">
-              Дата выезда:
-              <div class="modal-input-and-text">
-                <input class="input-date" type="date" name="Дата выезда" placeholder="1 сентября 2021">
-                <span class="modal-form-text">На эти даты есть свободные номера. Пока есть.</span>
-              </div>
-            </label>
+            <label class="modal-form-label" for="departure-date">Дата выезда:</label>
+            <div class="block-input-span">
+              <input class="input-date" type="text" id="departure-date" name="Дата выезда" value="1 сентября 2021"
+                placeholder="Введите дату выезда" required>
+              <span class="modal-form-text">На эти даты есть свободные номера. Пока есть.</span>
+            </div>
 
             <div class="adults-children">
-              <label class="modal-form-label" for="">
-                Взрослые:
-                <div class="modal-block-number-input">
-                  <button class="button-minus" type="button"></button>
-                  <input class="modal-input-number" type="number" name="Взрослые:" value="0" min="0" max="100">
-                  <button class="button-plus" type="button"></button>
-                </div>
+              <label class="modal-form-label" for="adults">Взрослые:</label>
+              <div class="modal-block-number-input">
+                <button class="button-minus" type="button"></button>
+                <input class="modal-input-number" type="number" id="adults" name="Взрослые:" value="0" min="0"
+                  max="100">
+                <button class="button-plus" type="button"></button>
+              </div>
 
-              </label>
-              <label class="modal-form-label" for="">
-                Дети:
+              <div>
+                <label class="modal-form-label" for="children">Дети:</label>
                 <span class="tooltip">
                   <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-lebel-children">
                     <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" fill="none">
                       <path fill="#fff" fill-rule="evenodd" d="M9.4 4h2v2h-2V4Zm2 12h-2V7h2v9Z" clip-rule="evenodd" />
                     </svg>
                   </button>
-                  <span class="tooltip-text" role="tooltip" id="tooltip-lebel-children">Укажите количество детей,<br>которые будут с вами, возраст которых от 6 до 18 лет. Дети<br>до
+                  <span class="tooltip-text" role="tooltip" id="tooltip-lebel-children">Укажите количество
+                    детей,<br>которые будут с вами, возраст которых от 6 до 18 лет. Дети<br>до
                     6 лет размещаются бесплатно.</span>
                 </span>
+              </div>
 
-                <div class="modal-block-number-input">
-                  <button class="button-minus" type="button"></button>
-                  <input class="modal-input-number" type="number" name="Дети:" value="0" min="0" max="100" id="">
-                  <button class="button-plus" type="button"></button>
-                </div>
-              </label>
+              <div class="modal-block-number-input">
+                <button class="button-minus" type="button"></button>
+                <input class="modal-input-number" type="number" id="children" name="Дети:" value="0" min="0" max="100">
+                <button class="button-plus" type="button"></button>
+              </div>
             </div>
 
-
-            <button class="button button-blue modal-button-form" type="button">Найти</button>
+            <button class="button button-blue modal-button-form" type="submit">Найти</button>
           </form>
         </section>
+        <button class="modal-close-button" type="button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
       </div>
     </div>
   </body>
